--- a/consultation.html
+++ b/consultation.html
@@ -1,12 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" >
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Services </title>
-    <link rel="stylesheet" href="servicesStyleSheet.css" />
+    <title>Consultation </title>
+    <link rel="stylesheet" href="StyleSheet1.css" />
 </head>
 
 
@@ -28,5 +28,5 @@
         </nav>
     </div>
 </body>
-Services
+Consultation
 </html>
