--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <h1> Control+Alt+Repair Shop</h1>
         <h2>Where Ctrl+Alt+Del Is Just the Beginning! </h2>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Consultation</a>
-            <a href="#">Services</a>
-            <a href="#">Location</a>
-            <a href="#">Schedule Appointment</a>
-            <a href="#">Shopping Cart</a>
+            <a href="./index.html">Home</a>
+            <a href="consultation.html">Consultation</a>
+            <a href="servicesPage.html">Services</a>
+            <a href="location.html">Location</a>
+            <a href="appointment.html">Schedule Appointment</a>
+            <a href="shoppingCart.html">Shopping Cart</a>
         </nav>
     </div>
 </body>
